[workspace]
members = [".", "tools/bin2c"]
default-members = [".", "tools/bin2c"]

[package]
name = "retrolang"
version = "0.1.1"
edition = "2021"
description = "A simple systems programming language compiler for Z80 microprocessors"
authors = ["Alex Jokela"]
license = "BSD-3-Clause"
repository = "https://github.com/ajokela/retrolang"
homepage = "https://github.com/ajokela/retrolang"
documentation = "https://github.com/ajokela/retrolang#readme"
readme = "README.md"
keywords = ["z80", "compiler", "retro-computing", "programming-language", "assembly"]
categories = ["compilers", "command-line-utilities", "development-tools"]
exclude = ["examples/*.bin", "examples/*.asm"]

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
logos = "0.14"

[dev-dependencies]
pretty_assertions = "1"
